--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,11 @@ dependencies:
   equatable: ^2.0.5
   
   # Firebase
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.2
   firebase_auth_web: ^5.8.12
-  cloud_firestore: ^4.13.6
-  firebase_messaging: ^14.7.9
+  cloud_firestore: ^4.8.4
+  firebase_messaging: ^14.6.5
   
   # Network
   dio: ^5.4.0
@@ -50,12 +50,11 @@ dependencies:
   json_annotation: ^4.8.1
   
   # Local Storage
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.2.0
   
   # UI
   flutter_svg: ^2.0.9
-  google_fonts: ^6.1.0
-  intl: ^0.19.0
+  intl: 0.19.0
   table_calendar: ^3.0.9
   fl_chart: ^0.65.0
 
@@ -63,7 +62,7 @@ dependencies:
   timezone: ^0.9.2
 
   # Added from the code block
-  provider: ^6.1.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -109,12 +108,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Roboto
-  #     fonts:
-  #       - asset: assets/fonts/Roboto-Regular.ttf
-  #       - asset: assets/fonts/Roboto-Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: CascadiaMono
+      fonts:
+        - asset: assets/fonts/CascadiaMono-Regular.ttf
+        - asset: assets/fonts/CascadiaMono-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/CascadiaMono-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
